Completed most functionality, havent done count of different items

--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,1 +1,15 @@
 <h1><%= @machine.location %> Vending Machine</h1>
+
+<<div class="snacks">
+  <% @machine.snacks.each do |snack| %>
+  <p>
+    <%= snack.name %>
+  </p>
+  <p>
+    Price: <%= snack.price %>
+  </p>
+  <% end %>
+  <p>Average snack price: $<%= @machine.average_snack_price.to_i %></p>
+</div>>
+
+</div>
